# nxdk_dyndxt

./: CMakeLists.txt  CMakeLists_project.txt  README.md
.github/workflows/: build.yml
bootstrap/: CMakeLists.txt  bootstrap_l1.asm  bootstrap_l2.asm  generate_raw_binary.sh  macros.asm.inc
build_util/: linker_script.ld
dll_loader/: dll_loader.c  dll_loader.h
src/: command_processor_util.c  command_processor_util.h  dllmain.c  dxtmain.c  dynamic_dxt_loader.dll.def  link_loaded_modules.c  link_loaded_modules.h  module_registry.c  module_registry.h  nxdk_dxt_dll_main.h  response_util.c  response_util.h  util.c  util.h  xbdm.dll.def  xbdm.h  xbdm_err.h
test/: CMakeLists.txt
test/command_processor_util/: test_main.cpp
test/dll_loader/: golden_dll.h  relocated_B00D7000.h  test_main.cpp
test/module_registry/: test_main.cpp
test/test_util/: windows.h  xbdm_stubs.cpp  xbdm_stubs.h
